[package]
name = "lost-metrics-core"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
bitflags = "2.4.1"
hashbrown = { version = "0.15.0", features = ["serde"] }
strum = "0.27"
strum_macros = "0.27"
uuid = { version = "1.15.1", features = ["v4", "serde"] }

[lints.rust]
unused_imports = "allow"
dead_code = "allow"